[package]
name = "simulation_curator"
version = "0.1.0"
edition = "2021"

[dependencies]
geo = "0.28.0"
geojson = "0.24.1"
rusqlite = { version = "0.32.1", features = ["bundled", "array"] }
serde_json = "1.0.121"
csv = "1.3.0"
polars = { version = "0.41.3", features = ["is_in", "lazy", "polars-io", "rows"] }
polars-io = { version = "0.41.3", features = ["csv"] }
polars-plan =  "0.41.3"
serde = { version = "1.0.204", features = ["derive"] }
serde_with = { version = "3.5.1", features = ["chrono_0_4"] }
clap = { version = "4.5.13", features = ["derive"] }

[[bin]]
name = "cmd_tool"
path = "src/cmd_tool.rs"

[[bin]]
name = "synthetic_topology_change_generator"
path = "src/synthetic_topology_change_generator.rs"
